2004-07-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/measure-grouping-engraver.cc: clarify

2004-07-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/parser.yy (context_def_mod): remove \consistsend

	* lily/context-def.cc (instantiate): use Translator::must_be_last
	to determine engraver order.

	* lily/translator.cc (must_be_last): new function

	* scripts/convert-ly.py (conv): rule.

	* lily/bar-line.cc (print): return '() for height == 0.0 too.

2004-07-27  Heikki Junes  <hjunes@cc.hut.fi>

	* input/regression/{stanza-number,volta-multi-staff}.ly: fix docs.

2004-07-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/lily-guile.hh (scm_is_int): compat glue.

2004-07-25  Pedro Kroger  <kroeger@pedrokroeger.net>

	* input/regression/page-layout.ly: new file.

	* scm/paper.scm (set-paper-dimensions): Preliminary support for
	left and right margins.

	* Documentation/user/changing-defaults.itely (Page layout):
	Explain the leftmargin option.

2004-07-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/test/lyrics-melisma-variants.ly (texidoc): new file.

	* input/test/lyrics-melisma-faster.ly: new file.

	* lily/new-lyric-combine-music-iterator.cc (find_voice): allow
	change of melody by setting associatedVoice.

	* lily/parser.yy (re_rhythmed_music): \lyricsto implies lyrics mode.

	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): don't copy
	file contents, rather \include them, so default linewidth is set.
	(ly_options): make BOOKPAPER set of options. Move linewidth
	settings there.

	* Documentation/user/examples.itely: new file. Templates are to be
	moved here.

	* Documentation/user/programming-interface.itely: move chapter.

	* scm/document-markup.scm (doc-markup-function): add @code

	* stepmake/stepmake/texinfo-rules.make: remove chmod.

2004-07-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/page-layout.scm (plain-header): add printpagenumber boolean
	to bookpaper.

	* make/mutopia-rules.make ($(outdir)/%.png $(outdir)/%.pdf