@@ -1,5 +1,8 @@
 2004-07-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/tie-engraver.cc (stop_translation_timestep): remember tie
+	definition, so \override works as expected.
+
 	* lily/measure-grouping-engraver.cc: clarify
 
 2004-07-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>
